force-app/main/default/objects/Sold_Case_Checklist__c/Sold_Case_Checklist__c.object-meta.xml
<CustomObject>
    <label>Sold Case Checklist</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold Case Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sold Case Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>