force-app/main/default/objects/Sold_Case_Checklist__c/fields/A4Me_Core__c.field-meta.xml
<CustomField>
    <fullName>A4Me_Core__c</fullName>
    <label>A4Me Core</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
                <default>true</default>
                <label>Opt In</label>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>