force-app/main/default/objects/Sold_Case_Checklist__c/fields/Able_To__c.field-meta.xml
<CustomField>
    <fullName>Able_To__c</fullName>
    <label>AbleTo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>