force-app/main/default/objects/Sold_Case_Checklist__c/fields/Acc_CI_Hi_Cross_Sell_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Acc_CI_Hi_Cross_Sell_Year_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acc/CI/HI Cross Sell - Year 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>