force-app/main/default/objects/Sold_Case_Checklist__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>