force-app/main/default/objects/Sold_Case_Checklist__c/fields/Additional_Sold_Case_Checklist_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sold_Case_Checklist_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Sold Case Checklist Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>