force-app/main/default/objects/Sold_Case_Checklist__c/fields/Advanced_Analytics_and_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Analytics_and_Recovery__c</fullName>
    <label>Advanced Analytics and Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Carveout</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>