force-app/main/default/objects/Sold_Case_Checklist__c/fields/Advanced_Analytics_and_Recvry_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Analytics_and_Recvry_Percentage__c</fullName>
    <label>Advanced Analytics and Recvry Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>