force-app/main/default/objects/Sold_Case_Checklist__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>