force-app/main/default/objects/Sold_Case_Checklist__c/fields/Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type__c</fullName>
    <label>Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>