force-app/main/default/objects/Sold_Case_Checklist__c/fields/Annual_Allowance_Year1__c.field-meta.xml
<CustomField>
    <fullName>Annual_Allowance_Year1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Allowance - Year1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>