force-app/main/default/objects/Sold_Case_Checklist__c/fields/Annual_Audit_Year2__c.field-meta.xml
<CustomField>
    <fullName>Annual_Audit_Year2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Audit - Year2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>