force-app/main/default/objects/Sold_Case_Checklist__c/fields/Annual_Audit_Year3__c.field-meta.xml
<CustomField>
    <fullName>Annual_Audit_Year3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Audit - Year3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>