force-app/main/default/objects/Sold_Case_Checklist__c/fields/Ardynn_Surest_Cancer_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Ardynn_Surest_Cancer_Advocacy__c</fullName>
    <label>Ardynn (Surest Cancer Advocacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Direct with Surest</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No - N/A</fullName>
                <isActive>false</isActive>
                <label>No - N/A</label>
            </value>
            <value>
                <fullName>No - Term</fullName>
                <isActive>false</isActive>
                <label>No - Term</label>
            </value>
            <value>
                <fullName>Yes - Retained</fullName>
                <isActive>false</isActive>
                <label>Yes - Retained</label>
            </value>
            <value>
                <fullName>Yes - Sold</fullName>
                <isActive>false</isActive>
                <label>Yes - Sold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>