force-app/main/default/objects/Sold_Case_Checklist__c/fields/Are_SSO_Technology_required__c.field-meta.xml
<CustomField>
    <fullName>Are_SSO_Technology_required__c</fullName>
    <label>Are SSO/Technology required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>