force-app/main/default/objects/Sold_Case_Checklist__c/fields/BH_ABA_Utilization_Mgmt_for_Surest_ASO__c.field-meta.xml
<CustomField>
    <fullName>BH_ABA_Utilization_Mgmt_for_Surest_ASO__c</fullName>
    <label>BH &amp; ABA Utilization Mgmt for Surest ASO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
                <default>true</default>
                <label>Opt In</label>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>