force-app/main/default/objects/Sold_Case_Checklist__c/fields/CAA_EMT_Approval__c.field-meta.xml
<CustomField>
    <fullName>CAA_EMT_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CAA EMT Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>