force-app/main/default/objects/Sold_Case_Checklist__c/fields/CAA_IDR_Service_Fees__c.field-meta.xml
<CustomField>
    <fullName>CAA_IDR_Service_Fees__c</fullName>
    <label>CAA/IDR Service Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEPM, % of Savings</fullName>
            </value>
            <value>
                <fullName>Carve-out</fullName>
            </value>
            <value>
                <fullName>EMT Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>