force-app/main/default/objects/Sold_Case_Checklist__c/fields/CAA_Service_Fees_Write_In__c.field-meta.xml
<CustomField>
    <fullName>CAA_Service_Fees_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CAA/IDR Service Fees - Write In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>