force-app/main/default/objects/Sold_Case_Checklist__c/fields/Cap_Category__c.field-meta.xml
<CustomField>
    <fullName>Cap_Category__c</fullName>
    <label>Cap Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim-Claim Level</fullName>
            </value>
            <value>
                <fullName>Claim-Claim Line Level</fullName>
            </value>
            <value>
                <fullName>Non-Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>