force-app/main/default/objects/Sold_Case_Checklist__c/fields/Cap_Type__c.field-meta.xml
<CustomField>
    <fullName>Cap_Type__c</fullName>
    <label>Cap Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Large Claim - Fee Dollar Cap</fullName>
            </value>
            <value>
                <fullName>Large Claim - Billable Savings Cap</fullName>
            </value>
            <value>
                <fullName>Fee - Fixed PEPM Cap</fullName>
            </value>
            <value>
                <fullName>Fee - Annual Dollars Cap</fullName>
            </value>
            <value>
                <fullName>Fee - Monthly Dollars Cap</fullName>
            </value>
            <value>
                <fullName>Lab Discount - Savings % Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>