force-app/main/default/objects/Sold_Case_Checklist__c/fields/Care_Explorer__c.field-meta.xml
<CustomField>
    <fullName>Care_Explorer__c</fullName>
    <label>Care Explorer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
                <default>true</default>
                <label>Included</label>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>