force-app/main/default/objects/Sold_Case_Checklist__c/fields/Child_and_Family_Behavioral_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Child_and_Family_Behavioral_Coaching__c</fullName>
    <label>Child and Family Behavioral Coaching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>