force-app/main/default/objects/Sold_Case_Checklist__c/fields/CI_Accident_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>CI_Accident_Underwriter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CI / Accident Underwriter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>