force-app/main/default/objects/Sold_Case_Checklist__c/fields/Claim_Fiduciary__c.field-meta.xml
<CustomField>
    <fullName>Claim_Fiduciary__c</fullName>
    <label>zz_Claim Fiduciary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UHC</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>