force-app/main/default/objects/Sold_Case_Checklist__c/fields/Claim_Fiduciary_Other__c.field-meta.xml
<CustomField>
    <fullName>Claim_Fiduciary_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_Claim Fiduciary - Write In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>