force-app/main/default/objects/Sold_Case_Checklist__c/fields/Claim_Trcking_Validation_Audt_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Trcking_Validation_Audt_Percentage__c</fullName>
    <label>Claims Tracking &amp; Validation (CTV) Audit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>