force-app/main/default/objects/Sold_Case_Checklist__c/fields/Claim_Trend_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Claim_Trend_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Trend Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>