force-app/main/default/objects/Sold_Case_Checklist__c/fields/Claims_Tracking_and_Validation_Audit__c.field-meta.xml
<CustomField>
    <fullName>Claims_Tracking_and_Validation_Audit__c</fullName>
    <label>Claims Tracking and Validation Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Carveout</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
                <isActive>false</isActive>
                <label>Opt Out</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>