force-app/main/default/objects/Sold_Case_Checklist__c/fields/Claims_Tracking_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Claims_Tracking_Percentage__c</fullName>
    <label>Claims Tracking Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>