force-app/main/default/objects/Sold_Case_Checklist__c/fields/COB_Vendor_Recoveries__c.field-meta.xml
<CustomField>
    <fullName>COB_Vendor_Recoveries__c</fullName>
    <label>COB Vendor Recoveries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>