force-app/main/default/objects/Sold_Case_Checklist__c/fields/COB_Vendor_Recoveries_Percentage__c.field-meta.xml
<CustomField>
    <fullName>COB_Vendor_Recoveries_Percentage__c</fullName>
    <label>COB Vendor Recoveries Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>