force-app/main/default/objects/Sold_Case_Checklist__c/fields/Communications_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Communications_Year_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communications/Wellness - Year 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>