force-app/main/default/objects/Sold_Case_Checklist__c/fields/Congenital_Heart_Disease__c.field-meta.xml
<CustomField>
    <fullName>Congenital_Heart_Disease__c</fullName>
    <label>Congenital Heart Disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Sold</fullName>
            </value>
            <value>
                <fullName>Yes - Retained</fullName>
            </value>
            <value>
                <fullName>No - N/A</fullName>
            </value>
            <value>
                <fullName>No - Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>