force-app/main/default/objects/Sold_Case_Checklist__c/fields/Coordination_of_Benefits_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Coordination_of_Benefits_Percentage__c</fullName>
    <label>Coordination of Benefits Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>